fix yotube button spacing (#14)

--- a/src/components/youtubeButton/youtubeButton.module.scss
+++ b/src/components/youtubeButton/youtubeButton.module.scss
@@ -1,4 +1,4 @@
-.circleButton {
+.youtubeButton {
   background-color: red;
   border-radius: 15%;
   border: none;
